#fix – Aligned font weight styling for tables with editor

--- a/scss/blocks/table.scss
+++ b/scss/blocks/table.scss
@@ -54,13 +54,15 @@ table.borderless tr {
 }
 
 table.header-column th:first-child,
-table.header-column td:first-child {
-  background-color: var(--colorBackgroundSecondary);
-}
-
+table.header-column td:first-child,
 table.header-row tr:first-child,
 table.header-row tr:first-child {
   background-color: var(--colorBackgroundSecondary);
+  font-weight: 700;
+
+  p {
+    font-weight: 700;
+  }
 }
 
 table th.left,
